fix: scripts